# rpc-auth-proxy

./: Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: ci.yml  docker-release.yml  docker.yml
examples/siwe-frontend/: .gitignore  package-lock.json  package.json  webpack.config.js
examples/siwe-frontend/src/: index.html  index.js
src/: config.rs  main.rs
src/auth/: access_level.rs  auth_middleware.rs  error.rs  jwt.rs  mod.rs  siwe.rs
src/proxy/: error.rs  interface.rs  mod.rs  server.rs
src/service/: http_logger.rs  mod.rs  rpc_logger.rs
