[package]
name = "rpc-auth-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.9"
alloy-rlp = "0.3.12"
alloy-rpc-types = "1.0.9"
anyhow = "1.0.98"
dashmap = "6.1.0"
futures-util = "0.3.31"
headers = "0.4.0"
hyper = "1.6.0"
jsonrpsee = "0.25.1"
jsonwebtoken = "9.3.1"
moka = { version = "0.12", features = ["future"] }
rand = "0.9.1"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", features = ["client"] }
serde = { version = "1.0.219", features = ["derive"] }
siwe = "0.6"
tokio = { version = "1.45.1", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["auth", "cors"] }
