[package]
name = "rpc-auth-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rpc-auth-proxy"
path = "src/main.rs"

[dependencies]
alloy = "1.0"
alloy-network-primitives = "1.0"
alloy-rlp = "0.3"
alloy-rpc-types = "1.0"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
dashmap = "6.1"
futures-util = "0.3"
headers = "0.4"
http = "1.3"
hyper = "1.6"
jsonrpsee = "0.25"
jsonwebtoken = "9.3"
moka = { version = "0.12", features = ["future"] }
rand = "0.9"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["client"] }
scroll-alloy-rpc-types = { git = "https://github.com/scroll-tech/reth", rev = "e204180ce8a2989248a1fe564b30ce62b28d2944" }
serde = { version = "1.0", features = ["derive"] }
siwe = "0.6"
tokio = { version = "1.47", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["auth", "cors", "request-id", "sensitive-headers", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
